fix extra 5 guia 1

--- a/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
@@ -65,9 +65,10 @@
         $$
 
         \textit{Antisimétrica:}
-        Puedo armar un ejemplo para ver si es antisimétrica. Cuando se define una función hay que definirla entera y no solo la parte que me interesa!
-        Voy a armar un par de funciones que $(f,g)$ con $f \distinto g$ y $f \relacion g$ y que además  $g \relacion f$. Eso sería suficiente para
-        mostrar que la función no es antisimétrica
+        Puedo armar un contraejemplo para ver si la función no es antisimétrica.\par
+        Cuando se define una función hay que definirla entera ¡No solo la parte que me interesa!
+        Defino un par de funciones $(f,g)$ con $f \distinto g$ y $f \relacion g$ y que además  $g \relacion f$.
+        Eso sería suficiente para mostrar que la relación $\relacion$ no es antisimétrica
         $$
           \llave{rcl}{
             f(1)   & = & \magenta{0} \\
@@ -86,7 +87,7 @@
             g(8)   & = & 0
           }
         $$
-        La función no es antisimétrica.
+        La relación $\relacion$ no es antisimétrica.
 
   \item
         En este ejercicio hay 3 clases. Recuerdo que hago todo el ejercicio escribiendo la relación en esta forma:
@@ -100,10 +101,10 @@
         $$
           -1, \, 0 \otext 1,
         $$
-        Por lo tanto mientras la cuenta de $f(1)-f(3)$ de lo mismo para dos funciones distintas, van a estar relacionas y sino fueran iguales
-        las funciones van a estar en clases distintas.
+        Por lo tanto mientras la cuenta de $f(1)-f(3)$ dé lo mismo para dos funciones distintas, las funciones
+        van a estar relacionadas, por ende viven en la misma clase. De forma contraria estarán en distintas clases.
 
-        \textit{Cuando me da 0:}
+        \textit{Cuando $f(1) - f(3)$ me da 0:}
         $$
           \llave{l}{
             f(1) = \magenta{0} \ytext f(3) = \magenta{0}
@@ -156,7 +157,7 @@
 
         \bigskip
 
-        \textit{Cuando me da 1:}
+        \textit{Cuando $f(1) - f(3)$ me da 1:}
         $$
           \llave{l}{
             f(1) = \magenta{1} \ytext f(3) = \magenta{0}
@@ -171,7 +172,7 @@
           \llave{rcl}{
             f(1)   & = & \magenta{1} \\
             f(2)   & = & 0           \\
-            f(3)   & = & \magenta{3} \\
+            f(3)   & = & \magenta{0} \\
             f(4)   & = & 0           \\
             \vdots & = & \vdots      \\
             f(8)   & = & 0           \\
@@ -198,7 +199,7 @@
 
         \bigskip
 
-        \textit{Cuando me da -1:}
+        \textit{Cuando $f(1) - f(3)$ me da -1:}
         $$
           \llave{l}{
             f(1) = \magenta{0} \ytext f(3) = \magenta{1}
