fix extra 5 guia 3

--- a/5-guia/ejercicios-5-extra/ej-extra-13-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-13-5.tex
@@ -29,7 +29,7 @@ $$
 		\Sii{$\congruencia{a}{0}{7}$} \congruencia{0}{6}{7} \red{\skull}\\
 		\Sii{$\noCongruencia{a}{0}{7}$}[PTF]
 		\congruencia{a^3}{6}{7}
-        \Sii{\red{!!}}
+		\Sii{\red{!!}}
 		\congruencia{a}{6}{7}
 	}
 $$
@@ -59,17 +59,16 @@ $$
 	\begin{array}{c}
 		\congruencia{a}{7}{11}
 		\Sii{def} a = 11 \cdot \blue{k} + 7 \\
-		\flecha{reemplazo}           \\
+		\flecha{reemplazo}                  \\
 		\congruencia{11\cdot \blue{k} + 7}{6}{7}
 		\sii
 		\congruencia{4\cdot \blue{k}}{6}{7}
 		\Sii{$2\cop 7$}[\red{!}]
 		\congruencia{\blue{k}}{5}{7}
 		\Sii{def}
-            \blue{k} = 7\cdot \yellow{q} + 5
-		\\
-		\flecha{reemplazo}[en $a$]   \\
-            a = 11 \cdot ( 7\cdot \yellow{q} + 5) + 7 = 77 \cdot \yellow{q} + 62
+		\blue{k} = 7\cdot \yellow{q} + 5    \\
+		\flecha{reemplazo}[en $a$]          \\
+		a = 11 \cdot ( 7\cdot \yellow{q} + 5) + 7 = 77 \cdot \yellow{q} + 62
 		\Sii{def}
 		\fcolorbox{orange}{white}{$\congruencia{a}{62}{77}$}
 	\end{array}
