--- a/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
@@ -104,7 +104,7 @@
         Por lo tanto mientras la cuenta de $f(1)-f(3)$ dé lo mismo para dos funciones distintas, las funciones
         van a estar relacionadas, por ende viven en la misma clase. De forma contraria estarán en distintas clases.
 
-        \textit{Cuando $f(1) - f(3)$ me da 0:}
+        \textit{Cuando $f(1) - f(3)$ me da $0$:}
         $$
           \llave{l}{
             f(1) = \magenta{0} \ytext f(3) = \magenta{0}
@@ -157,7 +157,7 @@
 
         \bigskip
 
-        \textit{Cuando $f(1) - f(3)$ me da 1:}
+        \textit{Cuando $f(1) - f(3)$ me da $1$:}
         $$
           \llave{l}{
             f(1) = \magenta{1} \ytext f(3) = \magenta{0}
@@ -199,7 +199,7 @@
 
         \bigskip
 
-        \textit{Cuando $f(1) - f(3)$ me da -1:}
+        \textit{Cuando $f(1) - f(3)$ me da $-1$:}
         $$
           \llave{l}{
             f(1) = \magenta{0} \ytext f(3) = \magenta{1}
