fix ej parcial 6 guia 1

--- a/1-guia/ejercicios-1-extra/ej-extra-6-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-6-1.tex
@@ -109,9 +109,9 @@ $$
 	      Cuáles son los valores del conjunto $A = \set{n \en \naturales :  100 \leq n \leq 1000}$, con $\#A = \magenta{901}$ que cumplen eso, más que cuales,
 	      cuántos es lo que me importa. Los elementos de $n \en A$ que cumplen $\congruencia{n}{1}{11}$:
 	      $$
-		      B = \set{100, 111, \dots, 991} \quad\text{con} \quad \#B \igual{\red{!}} \set{82}
+		      B = \set{100, 111, \dots, 991} \quad\text{con} \quad \#B \igual{\red{!}} 82
 	      $$
-	      Donde el 71, lo saco de pensar que el primer $n \en A$ que cumple es:
+	      Donde el 82, lo saco de pensar que el primer $n \en A$ que cumple es:
 	      $$
 		      100 = 11 \cdot \blue{9} + 1
 	      $$
