--- a/5-guia/ejercicios-5/ej-8-5.tex
+++ b/5-guia/ejercicios-5/ej-8-5.tex
@@ -1,1 +1,59 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+ Hallar todos los $a\en \enteros$ para los cuales $(2a-3:4a^{2}+10a-10) \neq 1$ 
+\end{enunciado}
+ 
+Sea $d=(2a-3:4a^{2}+10a-10)$. Entonces: 
+
+$$
+  \llave{l}{
+    d \divideA 2a-3 \Entonces{.2a}[] d \divideA 4a^{2}-6 \\
+    d \divideA 4a^{2}+10a-10
+  }
+  \llave{l}{
+    d \divideA 4a^{2}-6 \\
+    d \divideA 4a^{2}+10a-10
+  }
+\Entonces{Resto}[]
+d \divideA 16a-10
+$$
+
+Luego, tenemos
+
+$$
+\llave{l}{
+    d \divideA 16a-10 \\
+    d \divideA 2a-3 \Entonces{.-8}[] d \divideA -16a+24
+  }
+\Entonces{Sumo}[]
+d \divideA 14
+\entonces d \en \set{1, 2, 7, 14}
+$$
+
+Veo tabla de restos con $d=2$ con la expresión $2a-3$
+
+$$
+\begin{array}{|r|c|c|}
+  \hline
+  r_2(a)     & 0 & 1           \\ \hline
+  r_2(2a-3) & 1 & 1 \\ \hline
+\end{array}
+$$
+
+Entonces, como $2 \noDivide 2a-3 \paratodo a \en \enteros$, tenemos que $d \neq 2 \ytext d \neq 14 \paratodo a \en \enteros$. \\
+De modo que queremos hallar los valores de $a$ para los cuales $d=7$.
+\\
+
+Veo la tabla de restos con $d=7$ con ambas expresiones.
+
+$$
+\begin{array}{|r|c|c|c|c|c|c|c|}
+  \hline
+  r_7(a)     & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
+  r_7(2a-3) & 4 & 6 & 1 & 3 & 5 & \red{0} & 2 \\ \hline
+  r_7( 4a^{2}+10a-10) & 4 & 4 & 5 & 0 & 3 & \red{0} & 5 \\ \hline
+\end{array}
+$$
+
+Entonces, $d=7 \sisolosi \congruencia{a}{5}{7}$.
+Particularmente, $d \neq 1 \sisolosi \boxed{\congruencia{a}{5}{7}}$.
+
