--- a/4-guia/ejercicios-4-extra/ej-extra-14-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-14-4.tex
@@ -13,8 +13,8 @@ $$
     r_{18} (6 \cdot (-1)^n + 1^{3021} + r_{18}(\sumatoria{k=1}{n}3^k \cdot k!))      \\
                                                          & \igual{$\llamada1$}     &
     \llave{ll}{
-    r_{18} (6 + r_{18}(\sumatoria{k=1}{n}3^k \cdot k!))  & \text{ si $n$ es par}     \\
-    r_{18} (-6 + r_{18}(\sumatoria{k=1}{n}3^k \cdot k!)) & \text{ si $n$ es impar}
+    r_{18} (7 + r_{18}(\sumatoria{k=1}{n}3^k \cdot k!))  & \text{ si $n$ es par}     \\
+    r_{18} (-5 + r_{18}(\sumatoria{k=1}{n}3^k \cdot k!)) & \text{ si $n$ es impar}
     }
   \end{array}
 $$
@@ -37,7 +37,7 @@ A ojo se puede ver que $r_{18}(\sumatoria{k=2}{n} 3^k \cdot k!) = 0 \paratodo n 
 Pero como no sabemos si el que nos corrige está de mal humor probemos eso por inducción:\par\medskip
 Quiero probar que:
 $$
- p(n) : r_{18}(\sumatoria{k=2}{n} 3^k \cdot k!) = 0 \paratodo n \en \naturales_{\geq 2}
+  p(n) : r_{18}(\sumatoria{k=2}{n} 3^k \cdot k!) = 0 \paratodo n \en \naturales_{\geq 2}
 $$
 
 \textit{Caso base:}
@@ -63,11 +63,11 @@ Partiendo de $p(h+1)$
 $$
   \begin{array}{rcl}
     r_{18}(\sumatoria{k=2}{h+1} 3^k \cdot k!) & =                   &
-          r_{18}\bigl(\sumatoria{k=2}{\magenta{h}} 3^k \cdot k! + 3^{h+1} \cdot (h+1)!\bigr)           \\
+    r_{18}\bigl(\sumatoria{k=2}{\magenta{h}} 3^k \cdot k! + 3^{h+1} \cdot (h+1)!\bigr) \\
                                               & \igual{\purple{HI}} &
-          r_{18}\bigl(3^{h+1} \cdot (h+1)!\bigr)                                             \\
+    r_{18}\bigl(3^{h+1} \cdot (h+1)!\bigr)                                             \\
                                               & \igual{\red{!}}     &
-    r_{18}\bigl(3 \cdot \magenta{6} \cdot 3^h \cdot \frac{(h+1)!}{\magenta{3!}}\bigr) \\
+    r_{18}\bigl(3 \cdot \magenta{6} \cdot 3^h \cdot \frac{(h+1)!}{\magenta{3!}}\bigr)  \\
                                               & =                   & 0
   \end{array}
 $$
@@ -77,19 +77,26 @@ de hacerlo, tenés licencia para dibujar.\par
 Como $p(2), p(h) \ytext p(h+1)$ resultaron verdaderas, por  criterio de inducción $p(n)$ también lo es para todo
 $n \en \naturales_{\geq 2}$
 
-Volviendo a $\llamada2$
+Volviendo a $\llamada2$:
 $$
   r_{18}( \sumatoria{k=1}{n} 3^k \cdot k!) = 3
 $$
 
-por lo tanto en $\llamada1$
+por lo tanto en $\llamada1$:
 
 $$
   \begin{array}{rcl}
-    r_{18} (6 \cdot 35^n + 73^{3021} + \sumatoria{k=1}{n}3^k \cdot k!   )
-                                       & =                       & \llave{ll}{
-    r_{18} (6 + 3)  = 9                & \text{ si $n$ es par}                 \\
-    r_{18} (-6 + 3) \igual{\red{!}} 15 & \text{ si $n$ es impar}
+    r_{18} (6 \cdot 35^n + 73^{3021} + \sumatoria{k=1}{n}3^k \cdot k!)
+                                        & =                       & \llave{ll}{
+    r_{18} (6 + 1 + 3)  = 10                 & \text{ si $n$ es par}                 \\
+    r_{18} (-6 + 1 +  3) \igual{\red{!}} 16 & \text{ si $n$ es impar}
     }
   \end{array}
 $$
+
+% Contribuciones
+\begin{aportes}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
+\end{aportes}
+
