mejora parcial 1 guia 4

--- a/4-guia/ejercicios-4-extra/ej-extra-1-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-1-4.tex
@@ -1,22 +1,44 @@
-\ejExtra  4400 ¿Cuántos divisores distintos tiene? ¿Cuánto vale la suma de sus divisores.\\
-\separadorCorto
-$
-	4400
-	\flecha{factorizo} 4400 = 2^4 \cdot 5^2 \cdot 11
-	\flecha{los divisores $m \divideA 4400$}[tendrán la forma]
-	m = \pm 2^\alpha \cdot 2^\beta \cdot 2^\gamma,
-	\text{ con }
-	\llaves{c}{
-		0 \leq \alpha\leq 4\\
-		0 \leq \beta \leq 2\\
-		0 \leq \gamma \leq 1
-	}
-$\\
-Hay entonces un total de $5 \cdot 3 \cdot 2 = 30$ divisores positivos y $60$ enteros.\\
-Ahora busco la suma de esos divisores:
-$
-	\sumatoria{i=0}{4} \sumatoria{j=0}{2}\sumatoria{k=0}{1} 2^i \cdot 5^j \cdot 11^k =
-	\parentesis{\sumatoria{i=0}{4} 2^i } \cdot \parentesis{ \sumatoria{j=0}{2} 5^j } \cdot \parentesis{ \sumatoria{k=0}{1} 11^k}\\
-	\flecha{sumas}[geométricas]
-	\ub{\frac{2^{4+1} - 1}{2 - 1}}{31} \cdot \ub{\frac{5^{2+1} - 1}{5 - 1}}{31} \cdot \ub{\frac{11^{1+1} - 1}{11 - 1}}{12} = 11532.
-$\\
+\begin{enunciado}{\ejExtra}
+  4400 ¿Cuántos divisores distintos tiene? ¿Cuánto vale la suma de sus divisores?
+\end{enunciado}
+Factorizo el número a estudiar:
+$$
+  4400 = 2^4 \cdot 5^2 \cdot 11
+$$
+Quiero encontrar los divisores $m$ de 4400, por lo tanto:
+$$
+  m \divideA 4400
+  \sii
+  m = \pm 2^\alpha \cdot 5^\beta \cdot 11^\gamma
+  \quad\text{con}\quad
+  \llaves{c}{
+    0 \leq \alpha\leq \magenta{4}\\
+    0 \leq \beta \leq \magenta{2}\\
+    0 \leq \gamma \leq\magenta{1}
+  }
+$$
+
+\hyperlink{teoria-4:cantidadDivisores}{Acá un poco de teoría sobre esto}.
+Hay entonces un total de $(\magenta{4} + 1) \cdot (\magenta{2}+1) \cdot (\magenta{1} + 1) = 30$ divisores positivos y $60$ enteros.\\
+Busco ahora la suma de esos divisores:
+$$
+  \sumatoria{i=0}{4} \sumatoria{j=0}{2}\sumatoria{k=0}{1} 2^i \cdot 5^j \cdot 11^k
+  \igual{\red{!}}
+  \parentesis{\sumatoria{i=0}{4} 2^i } \cdot \parentesis{ \sumatoria{j=0}{2} 5^j } \cdot \parentesis{ \sumatoria{k=0}{1} 11^k}\\
+  \igual{\red{!!}}
+  \frac{2^{4+1} - 1}{2 - 1} \cdot \frac{5^{2+1} - 1}{5 - 1} \cdot \frac{11^{1+1} - 1}{11 - 1} = 31 \cdot 31 \cdot 12 = 11532.
+$$
+
+Donde se separaran las sumatorias, porque los factores son independientes y luego se usó la fórmula geométrica.
+
+\bigskip
+
+Concluyendo hay un total de \yellow{60 divisores distintos}, cuya \yellow{suma es 11532}.
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/TobLoni}{Tobia Loni \github}
+\end{aportes}
