--- a/4-guia/teoria-4/teoria-4.tex
+++ b/4-guia/teoria-4/teoria-4.tex
@@ -264,7 +264,7 @@
                     }$
                 \end{center}
 
-          \item Sea $n \en \enteros - \set{0},\,
+        \item \hypertarget{teoria-4:cantidadDivisores} Sea $n \en \enteros - \set{0},\,
                   n = \ub{s }{\set{-1,1}} \cdot \productoria{i=1}{k} p_i^{\alpha_i} =
                   p_1^{\alpha_1} \cdots p_k^{\alpha_k}$
                 su factorización en primos. Entonces todo divisor $m$ positivo de $n$ se escribe como:\par
