--- a/2-guia/ejercicios-2-extra/ej-extra-8-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-8-2.tex
@@ -26,16 +26,18 @@ $$
   \sumatoria{k = 4}{134} k^3 = \ub{4^3 + 5^3 + 6^3 + 7^3 + 8^3 + \cdots + 130^3 + 131^3 + 132^3 + 134^3}{131 \text{ términos}}
 $$
 Todos esos términos tienen $r_7$ igual a $0, 1$ o $-1$. \underline{Sumando 7 términos consecutivos se obtiene como resultado 0}. Organizo los términos teniendo en cuenta que
-$134 = 19 \cdot 7 + 1 $, es decir que tengo 19 sumas de 7 términos que dan 0 y me sobra el último término:
+$131 = 18 \cdot 7 + 5 $, es decir que tengo 18 sumas de 7 términos que dan 0 y me sobran los últimos 5 términos:
 $$
   \scriptstyle
   \congruencia{r_7\Big(\sumatoria{k = 4}{134} k^3 \Big)}{
-    \ub{\scriptstyle 4^3 + 5^3 + 6^3 + 7^3 + 8^3 + 9^3 + 10^3}{1^3 + (-1)^3 + (-1)^3 + 0^3 + 1^3 + 1^3 + (-1)^3=0} +
+    \ub{\scriptstyle 4^3 + 5^3 + 6^3 + 7^3 + 8^3 + 9^3 + 10^3}{1 + (-1) + (-1) + 0 + 1 + 1 + (-1) = 0} +
     \cdots +
-    \ub{\scriptstyle126^3+ 127^3 + 128^3 + 129^3 + 130^3 + 131^3 + 132^3}{1^3 + (-1)^3 + (-1)^3 + 0^3 + 1^3 + 1^3 + (-1)^3=0} + \ub{\scriptstyle134^3}{=1}}{7}
+    \ub{\scriptstyle 126^3 + 124^3+125^3+126^3+ 127^3 + 128^3 + 129^3 }{1 + (-1) + (-1) + 0 + 1 + 1 + (-1) = 0}
+    +
+    \ub{\scriptstyle  130^3 + 131^3 + 132^3 + 133^3 + 134^3}{1 + (-1) + (-1) + 0 + 1 = 0}}{7}
   \congruente
-  19 \cdot 0 + 1\ (7)
-  \congruente 1 \ (7) \llamada1
+  18 \cdot 0 + 0\ (7)
+  \congruente 0\ (7) \llamada1
 $$
 
 \bigskip
@@ -57,7 +59,7 @@ $$
 
 Por último juntando los resultados de $\llamada1 \ytext \llamada2$:
 $$
-  r_7 \Big( \sumatoria{k = 4}{134} (k! + k^3) \Big)  = 4
+  r_7 \Big( \sumatoria{k = 4}{134} (k! + k^3) \Big)  = 3
 $$
 
 % Contribuciones
@@ -65,4 +67,5 @@ $$
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://www.instagram.com/juaanparajo}{Juan Parajó \instagram}
 \end{aportes}
