update all pdfs

--- a/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
@@ -82,8 +82,8 @@ $$
   \begin{array}{c}
     f =
     \ob{(X - (1+2\sqrt{3})) (X - (1-2\sqrt{3}))}{X^2 - 2X - 11}
-    \ub{(X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}))^{2^{\llamada1}}
-    (X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}))^{2^{\llamada1}}}{(X^2 + X + 1)^2} = \\
+    \ub{(X - (-\frac{1}{2} + \frac{\sqrt{3}}{2}i))^{2^{\llamada1}}
+    (X - (-\frac{1}{2} - \frac{\sqrt{3}}{2}i))^{2^{\llamada1}}}{(X^2 + X + 1)^2} = \\
     =(X^2 - 2X - 11)(X^2 + X + 1)^2
   \end{array}
 $$
@@ -104,3 +104,9 @@ $$
   \fcolorbox{orange}{white}{$f = (X^2 - 2X - 11)(X^2 + X + 1)^2(X-3)$}
 $$
 
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
