--- a/5-guia/ejercicios-5/ej-1-5.tex
+++ b/5-guia/ejercicios-5/ej-1-5.tex
@@ -46,4 +46,8 @@
   \item
   No tiene solución, pues $(1555:-300)=5 \noDivide 11$
 
+  
+\begin{aportes}
+	\item \aporte{https://github.com/Nunezca}{Nunezca \github}
+\end{aportes}
 
